# Spatium

./: .dockerignore  .gitignore  3D_EDITOR_PRESENTATION.md  3D_MODELING_LOGIC.md  3D_MODELING_LOGIC_COMPLETE.md  Design.md  EC2_NGINX_SETUP.md  PROJECT_PORTFOLIO.md  README.md  REVOKE_DB_ERD_GUIDE.md  SPATIUM_3D_EDITOR_INTEGRATED_GUIDE.md  SPATIUM_3D_EDITOR_PPT_GUIDE.md  app.md  backend_booting.bat  docker-compose.yml  jwt.md  sever_starter.bat  주간_진행현황(0조_OOO).txt
.claude/: launch.json  (+1 more)
spatium-img-to-3d/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
spatium-img-to-3d/app/: config.py  logging_config.py  main.py  ui.py
spatium-img-to-3d/app/api/: routes.py
spatium-img-to-3d/app/pipelines/: image_to_3d.py
spatium-img-to-3d/app/providers/: huggingface_space.py  local_stable_fast_3d.py  local_triposr.py  stability.py
spatium-img-to-3d/app/services/: __init__.py  concurrency.py  glb_orientation.py  grounded_sam2.py  image_validation.py  process_runner.py  segmentation.py  storage.py  yolo_segmentation.py
spatium-img-to-3d/scripts/: check_grounded_sam2.sh  check_local_sf3d.sh  check_local_triposr.ps1  install_cuda_toolkit_12_1.ps1  install_cuda_toolkit_12_8.ps1  install_windows_cpp_build_tools.ps1  render_glb_preview.py  run_grounded_sam2.py  run_server_wsl.sh  setup_grounded_sam2.sh  setup_local_sf3d.sh  setup_local_triposr.ps1
spatium-img-to-3d/scripts/sf3d_no_rembg/rembg/: __init__.py
spatium-img-to-3d/tests/: test_api_contract.py  test_concurrency.py  test_image_validation.py  test_process_runner.py  test_storage.py
(+424 files in other folders)
