[project]
name = "image-to-3d-api"
version = "0.1.0"
description = "FastAPI service for turning a single image into a 3D GLB asset."
requires-python = ">=3.11"
dependencies = [
    "einops==0.7.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "imageio[ffmpeg]>=2.37.3",
    "llvmlite>=0.43",
    "moderngl==5.10.0",
    "numba>=0.60",
    "numpy>=1.26.0",
    "omegaconf==2.3.0",
    "onnxruntime>=1.27.0",
    "pillow==10.1.0",
    "pymatting>=1.1.15",
    "python-multipart>=0.0.9",
    "rembg==2.0.69",
    "torch==2.11.0",
    "torchmcubes",
    "torchvision==0.26.0",
    "transformers==4.35.0",
    "trimesh==4.0.5",
    "ultralytics>=8.3.0",
    "uvicorn[standard]>=0.30.0",
    "xatlas==0.0.9",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchmcubes = { git = "https://github.com/tatsy/torchmcubes.git" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uvicorn]
factory = false
